fix: use automatic widths as in the design specs

--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -5,8 +5,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2021-06-23T09:51:37.422Z\n"
-"PO-Revision-Date: 2021-06-23T09:51:37.422Z\n"
+"POT-Creation-Date: 2021-06-23T11:38:46.534Z\n"
+"PO-Revision-Date: 2021-06-23T11:38:46.534Z\n"
 
 msgid "Not authorized"
 msgstr "Not authorized"
@@ -48,5 +48,5 @@ msgstr "Choose a workflow"
 msgid "Workflow"
 msgstr "Workflow"
 
-msgid "No workflows found. None may exist or you may not have access to any."
-msgstr "No workflows found. None may exist or you may not have access to any."
+msgid "No workflows found. None may exist, or you may not have access to any."
+msgstr "No workflows found. None may exist, or you may not have access to any."
