feat: add title bar

--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -5,8 +5,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2021-06-27T19:54:18.211Z\n"
-"PO-Revision-Date: 2021-06-27T19:54:18.211Z\n"
+"POT-Creation-Date: 2021-07-05T15:50:59.416Z\n"
+"PO-Revision-Date: 2021-07-05T15:50:59.416Z\n"
 
 msgid "Not authorized"
 msgstr "Not authorized"
@@ -17,6 +17,12 @@ msgid ""
 msgstr ""
 "You don't have access to the Data Approval App. Contact a system "
 "administrator to request access."
+
+msgid "Ready for approval"
+msgstr "Ready for approval"
+
+msgid "{{dataSetsCount}} data sets"
+msgstr "{{dataSetsCount}} data sets"
 
 msgid "Clear selections"
 msgstr "Clear selections"
