--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -5,8 +5,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2021-06-27T19:54:18.211Z\n"
-"PO-Revision-Date: 2021-06-27T19:54:18.211Z\n"
+"POT-Creation-Date: 2021-07-06T09:48:01.394Z\n"
+"PO-Revision-Date: 2021-07-06T09:48:01.394Z\n"
 
 msgid "Not authorized"
 msgstr "Not authorized"
@@ -17,6 +17,21 @@ msgid ""
 msgstr ""
 "You don't have access to the Data Approval App. Contact a system "
 "administrator to request access."
+
+msgid "Approved"
+msgstr "Approved"
+
+msgid "Ready for approval and accepted"
+msgstr "Ready for approval and accepted"
+
+msgid "Ready for approval"
+msgstr "Ready for approval"
+
+msgid "Waiting"
+msgstr "Waiting"
+
+msgid "Cannot approve"
+msgstr "Cannot approve"
 
 msgid "Clear selections"
 msgstr "Clear selections"
@@ -143,3 +158,6 @@ msgstr "Workflow"
 
 msgid "No workflows found. None may exist, or you may not have access to any."
 msgstr "No workflows found. None may exist, or you may not have access to any."
+
+msgid "Could not load approval data"
+msgstr "Could not load approval data"
