--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -5,8 +5,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2021-07-06T09:48:01.394Z\n"
-"PO-Revision-Date: 2021-07-06T09:48:01.394Z\n"
+"POT-Creation-Date: 2021-07-06T11:47:50.144Z\n"
+"PO-Revision-Date: 2021-07-06T11:47:50.144Z\n"
 
 msgid "Not authorized"
 msgstr "Not authorized"
@@ -17,6 +17,9 @@ msgid ""
 msgstr ""
 "You don't have access to the Data Approval App. Contact a system "
 "administrator to request access."
+
+msgid "{{dataSetsCount}} data sets"
+msgstr "{{dataSetsCount}} data sets"
 
 msgid "Approved"
 msgstr "Approved"
