feat: implement non-data states for data workspace display

--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -5,8 +5,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2021-07-06T11:47:50.144Z\n"
-"PO-Revision-Date: 2021-07-06T11:47:50.144Z\n"
+"POT-Creation-Date: 2021-07-07T10:52:34.677Z\n"
+"PO-Revision-Date: 2021-07-07T10:52:34.677Z\n"
 
 msgid "Not authorized"
 msgstr "Not authorized"
@@ -17,6 +17,33 @@ msgid ""
 msgstr ""
 "You don't have access to the Data Approval App. Contact a system "
 "administrator to request access."
+
+msgid "Choose a data set to review"
+msgstr "Choose a data set to review"
+
+msgid ""
+"{{- workflowName}} has multiple data sets. Choose a data set from the tabs "
+"above."
+msgstr ""
+"{{- workflowName}} has multiple data sets. Choose a data set from the tabs "
+"above."
+
+msgid "There was a problem displaying this data set"
+msgstr "There was a problem displaying this data set"
+
+msgid ""
+"This data set couldn't be loaded or displayed. Try again, or contact your "
+"system administrator."
+msgstr ""
+"This data set couldn't be loaded or displayed. Try again, or contact your "
+"system administrator."
+
+msgid ""
+"This data set doesn't have any data for the currently selected period and "
+"organisation unit."
+msgstr ""
+"This data set doesn't have any data for the currently selected period and "
+"organisation unit."
 
 msgid "{{dataSetsCount}} data sets"
 msgstr "{{dataSetsCount}} data sets"
