fix: code review changes

--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -5,8 +5,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2021-07-07T11:36:05.841Z\n"
-"PO-Revision-Date: 2021-07-07T11:36:05.841Z\n"
+"POT-Creation-Date: 2021-07-07T12:32:15.757Z\n"
+"PO-Revision-Date: 2021-07-07T12:32:15.757Z\n"
 
 msgid "Not authorized"
 msgstr "Not authorized"
@@ -37,6 +37,9 @@ msgid ""
 msgstr ""
 "This data set couldn't be loaded or displayed. Try again, or contact your "
 "system administrator."
+
+msgid "Retry loading data set"
+msgstr "Retry loading data set"
 
 msgid "Loading data set"
 msgstr "Loading data set"
