fix: tweak lack of data message

--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -5,8 +5,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2021-07-07T12:32:15.757Z\n"
-"PO-Revision-Date: 2021-07-07T12:32:15.757Z\n"
+"POT-Creation-Date: 2021-07-07T12:40:17.704Z\n"
+"PO-Revision-Date: 2021-07-07T12:40:17.704Z\n"
 
 msgid "Not authorized"
 msgstr "Not authorized"
@@ -45,10 +45,10 @@ msgid "Loading data set"
 msgstr "Loading data set"
 
 msgid ""
-"This data set doesn't have any data for the currently selected period and "
+"This data set doesn't have any data for the selected period and "
 "organisation unit."
 msgstr ""
-"This data set doesn't have any data for the currently selected period and "
+"This data set doesn't have any data for the selected period and "
 "organisation unit."
 
 msgid "{{dataSetsCount}} data sets"
