--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -18,6 +18,18 @@ msgstr ""
 "You don't have access to the Data Approval App. Contact a system "
 "administrator to request access."
 
+msgid "Approve"
+msgstr "Approve"
+
+msgid "Accept"
+msgstr "Accept"
+
+msgid "Unapprove"
+msgstr "Unapprove"
+
+msgid "Unaccept"
+msgstr "Unaccept"
+
 msgid "Choose a data set to review"
 msgstr "Choose a data set to review"
 
@@ -53,6 +65,22 @@ msgstr ""
 
 msgid "{{dataSetsCount}} data sets"
 msgstr "{{dataSetsCount}} data sets"
+
+msgid "Approving {{count}} data sets"
+msgid_plural "Approving {{count}} data sets"
+msgstr[0] "Approving {{count}} data sets"
+msgstr[1] "Approving {{count}} data sets"
+
+msgid "Approving {{count}} data set"
+msgid_plural "Approving {{count}} data set"
+msgstr[0] "Approving {{count}} data set"
+msgstr[1] "Approving {{count}} data set"
+
+msgid "Are you sure you want to approve this data?"
+msgstr "Are you sure you want to approve this data?"
+
+msgid "Cancel"
+msgstr "Cancel"
 
 msgid "Approved"
 msgstr "Approved"
