--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -5,8 +5,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2021-07-14T10:11:31.114Z\n"
-"PO-Revision-Date: 2021-07-14T10:11:31.114Z\n"
+"POT-Creation-Date: 2021-07-20T08:50:33.586Z\n"
+"PO-Revision-Date: 2021-07-20T08:50:33.586Z\n"
 
 msgid "Not authorized"
 msgstr "Not authorized"
@@ -18,17 +18,45 @@ msgstr ""
 "You don't have access to the Data Approval App. Contact a system "
 "administrator to request access."
 
-msgid "Approve"
-msgstr "Approve"
+msgid "Acceptance failed: {{error}}"
+msgstr "Acceptance failed: {{error}}"
 
 msgid "Accept"
 msgstr "Accept"
 
-msgid "Unapprove"
-msgstr "Unapprove"
+msgid "Approval saved"
+msgstr "Approval saved"
+
+msgid "Approve"
+msgstr "Approve"
+
+msgid "Approving {{count}} data sets"
+msgid_plural "Approving {{count}} data sets"
+msgstr[0] "Approving {{count}} data sets"
+msgstr[1] "Approving {{count}} data sets"
+
+msgid "Approving {{count}} data set"
+msgid_plural "Approving {{count}} data set"
+msgstr[0] "Approving {{count}} data set"
+msgstr[1] "Approving {{count}} data set"
+
+msgid "Are you sure you want to approve this data?"
+msgstr "Are you sure you want to approve this data?"
+
+msgid "Cancel"
+msgstr "Cancel"
+
+msgid "Unacceptance failed: {{error}}"
+msgstr "Unacceptance failed: {{error}}"
 
 msgid "Unaccept"
 msgstr "Unaccept"
+
+msgid "Unapproval failed: {{error}}"
+msgstr "Unapproval failed: {{error}}"
+
+msgid "Unapprove"
+msgstr "Unapprove"
 
 msgid "Choose a data set to review"
 msgstr "Choose a data set to review"
@@ -65,22 +93,6 @@ msgstr ""
 
 msgid "{{dataSetsCount}} data sets"
 msgstr "{{dataSetsCount}} data sets"
-
-msgid "Approving {{count}} data sets"
-msgid_plural "Approving {{count}} data sets"
-msgstr[0] "Approving {{count}} data sets"
-msgstr[1] "Approving {{count}} data sets"
-
-msgid "Approving {{count}} data set"
-msgid_plural "Approving {{count}} data set"
-msgstr[0] "Approving {{count}} data set"
-msgstr[1] "Approving {{count}} data set"
-
-msgid "Are you sure you want to approve this data?"
-msgstr "Are you sure you want to approve this data?"
-
-msgid "Cancel"
-msgstr "Cancel"
 
 msgid "Approved"
 msgstr "Approved"
