refactor(selection): use "useSelectionContext" instead of "useSelectionParams"

--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -5,8 +5,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2021-07-21T09:13:57.788Z\n"
-"PO-Revision-Date: 2021-07-21T09:13:57.788Z\n"
+"POT-Creation-Date: 2021-07-23T07:15:00.023Z\n"
+"PO-Revision-Date: 2021-07-23T07:15:00.023Z\n"
 
 msgid "Not authorized"
 msgstr "Not authorized"
@@ -100,6 +100,9 @@ msgid ""
 msgstr ""
 "This data set doesn't have any data for the selected period and "
 "organisation unit."
+
+msgid "1 data set"
+msgstr "1 data set"
 
 msgid "{{dataSetsCount}} data sets"
 msgstr "{{dataSetsCount}} data sets"
