--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -7,6 +7,8 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "POT-Creation-Date: 2021-08-12T11:12:06.430Z\n"
 "PO-Revision-Date: 2021-08-12T11:12:06.430Z\n"
+"POT-Creation-Date: 2021-08-12T12:36:19.640Z\n"
+"PO-Revision-Date: 2021-08-12T12:36:19.640Z\n"
 
 msgid "Not authorized"
 msgstr "Not authorized"
@@ -77,6 +79,9 @@ msgid ""
 msgstr ""
 "{{- workflowName}} has multiple data sets. Choose a data set from the tabs "
 "above."
+
+msgid "Loading data set"
+msgstr "Loading data set"
 
 msgid "There was a problem displaying this data set"
 msgstr "There was a problem displaying this data set"
