--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -5,8 +5,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2021-08-12T17:47:07.144Z\n"
-"PO-Revision-Date: 2021-08-12T17:47:07.144Z\n"
+"POT-Creation-Date: 2021-08-18T10:16:01.189Z\n"
+"PO-Revision-Date: 2021-08-18T10:16:01.189Z\n"
 
 msgid "Not authorized"
 msgstr "Not authorized"
@@ -219,6 +219,9 @@ msgstr "Financial year (Start April)"
 
 msgid "Clear selections"
 msgstr "Clear selections"
+
+msgid "Waiting for approval"
+msgstr "Waiting for approval"
 
 msgid "Choose a period first"
 msgstr "Choose a period first"
