--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -5,8 +5,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2021-08-17T21:15:20.392Z\n"
-"PO-Revision-Date: 2021-08-17T21:15:20.392Z\n"
+"POT-Creation-Date: 2021-08-23T16:54:18.027Z\n"
+"PO-Revision-Date: 2021-08-23T16:54:18.027Z\n"
 
 msgid "Not authorized"
 msgstr "Not authorized"
@@ -240,6 +240,9 @@ msgstr "Organisation Unit"
 
 msgid "Choose an organisation unit"
 msgstr "Choose an organisation unit"
+
+msgid "Search organisation units"
+msgstr "Search organisation units"
 
 msgid "Period"
 msgstr "Period"
