--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -5,8 +5,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2021-08-24T15:23:28.860Z\n"
-"PO-Revision-Date: 2021-08-24T15:23:28.860Z\n"
+"POT-Creation-Date: 2021-08-25T07:18:46.070Z\n"
+"PO-Revision-Date: 2021-08-25T07:18:46.070Z\n"
 
 msgid "Not authorized"
 msgstr "Not authorized"
@@ -109,8 +109,14 @@ msgstr "{{dataSetsCount}} data sets"
 msgid "Approved {{- dateTimeStr}}"
 msgstr "Approved {{- dateTimeStr}}"
 
-msgid "Approved by {{approvedBy}}"
-msgstr "Approved by {{approvedBy}}"
+msgid "Approved by {{- name}} {{timeAgo}}"
+msgstr "Approved by {{- name}} {{timeAgo}}"
+
+msgid "Approved {{timeAgo}}"
+msgstr "Approved {{timeAgo}}"
+
+msgid "Approved by {{- name}}"
+msgstr "Approved by {{- name}}"
 
 msgid "Approved"
 msgstr "Approved"
