--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -5,8 +5,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2021-08-25T13:54:16.194Z\n"
-"PO-Revision-Date: 2021-08-25T13:54:16.194Z\n"
+"POT-Creation-Date: 2021-09-02T13:26:50.571Z\n"
+"PO-Revision-Date: 2021-09-02T13:26:50.571Z\n"
 
 msgid "Not authorized"
 msgstr "Not authorized"
@@ -103,19 +103,15 @@ msgstr "This data set doesn't have any data for {{- period}} in {{- orgUnit}}."
 msgid "This data set may not display properly"
 msgstr "This data set may not display properly"
 
-msgid ""
-"This data set does not use a default form. The data is displayed as a "
-"simple grid below, but this might not be a suitable representation."
-msgstr ""
-"This data set does not use a default form. The data is displayed as a "
-"simple grid below, but this might not be a suitable representation."
+msgid "This data set uses a custom form, which isn't supported in this app."
+msgstr "This data set uses a custom form, which isn't supported in this app."
 
 msgid ""
-"Displaying data from data sets using custom forms is currently not "
-"supported in this app. Please refer to the legacy app instead."
+"The data is displayed in the default form below. To continue using custom "
+"forms, use the Data Approval legacy app."
 msgstr ""
-"Displaying data from data sets using custom forms is currently not "
-"supported in this app. Please refer to the legacy app instead."
+"The data is displayed in the default form below. To continue using custom "
+"forms, use the Data Approval legacy app."
 
 msgid "1 data set"
 msgstr "1 data set"
