--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -5,8 +5,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2021-09-28T13:14:40.432Z\n"
-"PO-Revision-Date: 2021-09-28T13:14:40.432Z\n"
+"POT-Creation-Date: 2021-10-04T09:20:46.071Z\n"
+"PO-Revision-Date: 2021-10-04T09:20:46.071Z\n"
 
 msgid "Not authorized"
 msgstr "Not authorized"
@@ -122,29 +122,23 @@ msgstr "{{dataSetsCount}} data sets"
 msgid "Approved {{- dateTimeStr}}"
 msgstr "Approved {{- dateTimeStr}}"
 
-msgid "Approved by {{- name}} {{timeAgo}}"
-msgstr "Approved by {{- name}} {{timeAgo}}"
-
-msgid "Approved {{timeAgo}}"
-msgstr "Approved {{timeAgo}}"
-
-msgid "Approved by {{- name}}"
-msgstr "Approved by {{- name}}"
-
-msgid "Approved"
-msgstr "Approved"
-
 msgid "Ready for approval"
 msgstr "Ready for approval"
-
-msgid "Ready for approval — Accepted"
-msgstr "Ready for approval — Accepted"
 
 msgid "Waiting for lower level approval"
 msgstr "Waiting for lower level approval"
 
 msgid "Waiting for higher level approval"
 msgstr "Waiting for higher level approval"
+
+msgid "Approval by {{- name}} accepted {{timeAgo}}"
+msgstr "Approval by {{- name}} accepted {{timeAgo}}"
+
+msgid "Approved by {{- name}} {{timeAgo}}"
+msgstr "Approved by {{- name}} {{timeAgo}}"
+
+msgid "Approved at higher level {{timeAgo}}"
+msgstr "Approved at higher level {{timeAgo}}"
 
 msgid "Cannot be approved"
 msgstr "Cannot be approved"
@@ -250,6 +244,9 @@ msgstr "Clear selections"
 
 msgid "Waiting for approval"
 msgstr "Waiting for approval"
+
+msgid "Approved"
+msgstr "Approved"
 
 msgid "Failed to load approval state"
 msgstr "Failed to load approval state"
