fix(approval-status-tag): show custom tag text for unauthorized users

--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -5,8 +5,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2021-10-04T09:20:46.071Z\n"
-"PO-Revision-Date: 2021-10-04T09:20:46.071Z\n"
+"POT-Creation-Date: 2021-10-04T12:25:48.548Z\n"
+"PO-Revision-Date: 2021-10-04T12:25:48.548Z\n"
 
 msgid "Not authorized"
 msgstr "Not authorized"
@@ -139,6 +139,9 @@ msgstr "Approved by {{- name}} {{timeAgo}}"
 
 msgid "Approved at higher level {{timeAgo}}"
 msgstr "Approved at higher level {{timeAgo}}"
+
+msgid "You do not have authority to approve data"
+msgstr "You do not have authority to approve data"
 
 msgid "Cannot be approved"
 msgstr "Cannot be approved"
