--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -5,8 +5,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2021-10-05T13:14:45.209Z\n"
-"PO-Revision-Date: 2021-10-05T13:14:45.209Z\n"
+"POT-Creation-Date: 2021-10-07T11:59:16.763Z\n"
+"PO-Revision-Date: 2021-10-07T11:59:16.763Z\n"
 
 msgid "Not authorized"
 msgstr "Not authorized"
@@ -124,8 +124,8 @@ msgstr "Approval by {{- name}} accepted {{timeAgo}}"
 msgid "Approved by {{- name}} {{timeAgo}}"
 msgstr "Approved by {{- name}} {{timeAgo}}"
 
-msgid "Approved at higher level {{timeAgo}}"
-msgstr "Approved at higher level {{timeAgo}}"
+msgid "Approved at higher level"
+msgstr "Approved at higher level"
 
 msgid "You do not have authority to approve data"
 msgstr "You do not have authority to approve data"
