--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -5,8 +5,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2021-09-02T13:26:50.571Z\n"
-"PO-Revision-Date: 2021-09-02T13:26:50.571Z\n"
+"POT-Creation-Date: 2021-10-07T11:59:16.763Z\n"
+"PO-Revision-Date: 2021-10-07T11:59:16.763Z\n"
 
 msgid "Not authorized"
 msgstr "Not authorized"
@@ -100,19 +100,6 @@ msgstr "Retry loading data set"
 msgid "This data set doesn't have any data for {{- period}} in {{- orgUnit}}."
 msgstr "This data set doesn't have any data for {{- period}} in {{- orgUnit}}."
 
-msgid "This data set may not display properly"
-msgstr "This data set may not display properly"
-
-msgid "This data set uses a custom form, which isn't supported in this app."
-msgstr "This data set uses a custom form, which isn't supported in this app."
-
-msgid ""
-"The data is displayed in the default form below. To continue using custom "
-"forms, use the Data Approval legacy app."
-msgstr ""
-"The data is displayed in the default form below. To continue using custom "
-"forms, use the Data Approval legacy app."
-
 msgid "1 data set"
 msgstr "1 data set"
 
@@ -122,29 +109,26 @@ msgstr "{{dataSetsCount}} data sets"
 msgid "Approved {{- dateTimeStr}}"
 msgstr "Approved {{- dateTimeStr}}"
 
-msgid "Approved by {{- name}} {{timeAgo}}"
-msgstr "Approved by {{- name}} {{timeAgo}}"
-
-msgid "Approved {{timeAgo}}"
-msgstr "Approved {{timeAgo}}"
-
-msgid "Approved by {{- name}}"
-msgstr "Approved by {{- name}}"
-
-msgid "Approved"
-msgstr "Approved"
-
 msgid "Ready for approval"
 msgstr "Ready for approval"
-
-msgid "Ready for approval — Accepted"
-msgstr "Ready for approval — Accepted"
 
 msgid "Waiting for lower level approval"
 msgstr "Waiting for lower level approval"
 
 msgid "Waiting for higher level approval"
 msgstr "Waiting for higher level approval"
+
+msgid "Approval by {{- name}} accepted {{timeAgo}}"
+msgstr "Approval by {{- name}} accepted {{timeAgo}}"
+
+msgid "Approved by {{- name}} {{timeAgo}}"
+msgstr "Approved by {{- name}} {{timeAgo}}"
+
+msgid "Approved at higher level"
+msgstr "Approved at higher level"
+
+msgid "You do not have authority to approve data"
+msgstr "You do not have authority to approve data"
 
 msgid "Cannot be approved"
 msgstr "Cannot be approved"
@@ -251,6 +235,9 @@ msgstr "Clear selections"
 msgid "Waiting for approval"
 msgstr "Waiting for approval"
 
+msgid "Approved"
+msgstr "Approved"
+
 msgid "Failed to load approval state"
 msgstr "Failed to load approval state"
 
@@ -286,3 +273,6 @@ msgstr "No workflows found. None may exist, or you may not have access to any."
 
 msgid "Could not load approval data"
 msgstr "Could not load approval data"
+
+msgid "Retry loading approval data"
+msgstr "Retry loading approval data"
